# nrf5340-pac

./: Cargo.toml  README.md  nrf5340_application.svd  nrf5340_network.svd  update.sh
nrf5340-app-pac/: Cargo.toml  device.x
nrf5340-app-pac/src/: cache_s.rs  cachedata_s.rs  cacheinfo_s.rs  clock_ns.rs  comp_ns.rs  cryptocell_s.rs  ctrlap_ns.rs  dcnf_ns.rs  egu0_ns.rs  ficr_s.rs  fpu_ns.rs  gpiote0_s.rs  i2s0_ns.rs  ipc_ns.rs  kmu_ns.rs  lib.rs  lpcomp_ns.rs  mutex_ns.rs  nfct_ns.rs  nvmc_ns.rs  oscillators_ns.rs  p0_ns.rs  pdm0_ns.rs  pwm0_ns.rs  qdec0_ns.rs  qdec_ns.rs  qspi_ns.rs  regulators_ns.rs  reset_ns.rs  rtc0_ns.rs  saadc_ns.rs  spu_s.rs  tad_s.rs  timer0_ns.rs  twis0_ns.rs  uicr_s.rs  usbd_ns.rs  usbregulator_ns.rs  vmc_ns.rs  wdt0_ns.rs
nrf5340-app-pac/src/cache_s/: debuglock.rs  enable.rs  erase.rs  erasestatus.rs  invalidate.rs  mode.rs  profiling.rs  profilingclear.rs  profilingenable.rs  writelock.rs
nrf5340-app-pac/src/cachedata_s/: set.rs
nrf5340-app-pac/src/cacheinfo_s/: set.rs
nrf5340-app-pac/src/clock_ns/: events_done.rs  events_hfclk192mstarted.rs  events_hfclkaudiostarted.rs  events_hfclkstarted.rs  events_lfclkstarted.rs  hfclk192malwaysrun.rs  hfclk192mctrl.rs  hfclk192mrun.rs  hfclk192msrc.rs  hfclk192mstat.rs  hfclkaudioalwaysrun.rs  hfclkaudiorun.rs  hfclkaudiostat.rs  hfclkctrl.rs  hfclkrun.rs  hfclksrc.rs  hfclkstat.rs  inten.rs  intenclr.rs  intenset.rs  intpend.rs  lfclkalwaysrun.rs  lfclkrun.rs  lfclksrc.rs  lfclkstat.rs  publish_done.rs  publish_hfclk192mstarted.rs  publish_hfclkaudiostarted.rs  publish_hfclkstarted.rs  (+16 more)
(+1267 files in other folders)
